instance-manager/bridge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bridge-service
spec:
  selector:
    app: challenge
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort
