instance-manager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instance-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: instance-manager
  template:
    metadata:
      labels:
        app: instance-manager
    spec:
      containers:
      - name: flask-backend
        image: rydersel/instance-manager:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: instance-manager
spec:
  type: NodePort
  selector:
    app: instance-manager
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 32001
