instance-manager/network-policy.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: challenge-to-bridge-only
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: challenge
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: bridge
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: bridge
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bridge-allow-all
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: bridge
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress:
  - {}
